(feat): created sample model

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "H.A.B.M. Faisal Akandha",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.10"
