--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "backend": "nodemon server.js"
   },
   "author": "H.A.B.M. Faisal Akandha",
   "license": "ISC",
