--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "H.A.B.M. Faisal Akandha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
