--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,16 @@
-## test
+version: '3.7'
+
+services:
+
+  revusha: 
+    container_name: revusha
+    build: 
+      context: ./client
+      dockerfile: Dockerfile
+    volumes:
+      - ./client/:/app
+      - /app/node_modules
+    ports:
+      - 3001:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
